tests/fixtures/valid/final_expr_binary_expr.torel
unit fixtures.final_expr_binary_expr;

export proc main() -> Bool {
    1 + 2 * 3 == 7
}
