tests/fixtures/invalid/operator_not_int.torel
unit fixtures.operator_not_int;

export proc main() -> Bool {
    !1
}
